[tool.poetry]
name = "python-versions-example"
version = "0.1.0"
description = ""
authors = ["Julien Poissonnier <julien@caffeine.lu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pulumi = "^3.127.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
